<resources>
    <string name="app_name">BuglyHotfix</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="name">mark_name</string>
    <string name="navigation_news">news</string>
    <string name="navigation_images">images</string>
    <string name="navigation_weather">weather</string>
    <string name="navigation_about">about</string>
    <string name="navigation_Pay">JPay</string>
    <string name="navigation_AliPay">AliPay</string>
    <string name="navigation_video">Video</string>
    <string name="navigation_joker">Joker</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="app_description">本APP用来演示Material Design以及MVP设计模式在项目中的使用</string>
    <string name="app_github_url">APP地址：https://github.com/liuling07/SimpleNews</string>
    <string name="author">作者：Lauren</string>
    <string name="email">邮箱：lauren.liuling@gmail.com</string>
    <string name="blog">博客：http://www.liuling123.com</string>

    <string name="top">头条</string>
    <string name="nba">NBA</string>
    <string name="cars">汽车</string>
    <string name="jokes">笑话</string>

    <string name="jingxuan">精选</string>
    <string name="qutu">趣图</string>
    <string name="meitu">美图</string>
    <string name="story">故事</string>

    <string name="load_fail">加载数据失败!</string>
    <string name="title_activity_news_detail">NewsDetailActivity</string>

    <string name="image_hit">一次只加载20条，查看更多内容请刷新哦。</string>
    <string name="options_menu_item_bank">Bank</string>
    <string name="options_menu_item_email">Email</string>
    <string name="options_menu_item_social_network">Social</string>
    <string name="options_menu_item_others">Others</string>
    <string name="options_menu_item_ecommerce">eCommerce</string>
    <string name="update">update</string>
    <string name="edit">edit</string>


</resources>
