<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@id/newsFragment"
            android:icon="@drawable/ic_assessment_white_24dp"
            android:checked="true"
            android:title="@string/navigation_news" />
        <item
            android:id="@id/imageFragment"
            android:icon="@drawable/ic_image_white_24dp"
            android:title="@string/navigation_images" />
        <item
            android:id="@id/weatherFragment"
            android:icon="@drawable/ic_date_range_white_24dp"
            android:title="@string/navigation_weather" />

        <item
            android:id="@+id/jokerFragment"
            android:icon="@drawable/ic_portrait_white_24dp"
            android:title="@string/navigation_joker" />

        <item
            android:id="@+id/videoFragment"
            android:icon="@drawable/ic_date_range_white_24dp"
            android:title="@string/navigation_video" />

        <item
            android:id="@+id/pay"
            android:icon="@drawable/ic_ecommerce"
            android:title="@string/navigation_Pay" />

        <item
            android:id="@+id/AliPay"
            android:icon="@drawable/ic_bank"
            android:title="@string/navigation_AliPay" />

        <item
        android:id="@+id/aboutFragment"
        android:icon="@drawable/ic_email"
        android:title="@string/navigation_about" />

        <item
            android:id="@+id/fabFragment"
            android:icon="@drawable/ic_add_catogory"
            android:title="@string/navigation_about" />
    </group>
</menu>
